# stellar-id

./: CONTRIBUTING.md  Cargo.toml  Makefile
contracts/stellar-id/: Cargo.toml
contracts/stellar-id/src/: lib.rs
contracts/stellar-id/test_snapshots/tests/: test_batch_issue_credentials.1.json  test_batch_issue_inactive_schema_panics.1.json  test_credential_with_expiry.1.json  test_deactivate_issuer.1.json  test_deactivate_schema.1.json  test_existing_credentials_remain_valid_after_schema_deactivation.1.json  test_get_subject_credentials.1.json  test_has_credential_from_issuer.1.json  test_has_valid_credential_expired.1.json  test_has_valid_credential_expires_at_now_boundary.1.json  test_has_valid_credential_true.1.json  test_identity_created_on_first_credential.1.json  test_initialize.1.json  test_invalid_trust_level.1.json  test_issue_credential.1.json  test_issue_credential_against_inactive_schema_panics.1.json  test_multiple_credentials_same_schema_one_expired_one_valid.1.json  test_non_admin_cannot_register_issuer.1.json  test_non_expiring_credential_indefinite.1.json  test_non_issuer_cannot_approve.1.json  test_non_issuer_cannot_revoke.1.json  test_non_owner_cannot_deactivate_schema.1.json  test_non_subject_cannot_propose.1.json  test_register_issuer.1.json  test_register_schema.1.json  test_renew_credential_happy_path.1.json  test_renew_credential_non_expiring.1.json  test_renew_credential_non_issuer.1.json  test_renew_credential_revoked.1.json  test_renew_credential_zero_seconds.1.json  (+5 more)
examples/gated-vault/: Cargo.toml
examples/gated-vault/src/: lib.rs
(+11 files in other folders)
