[package]
name = "stellar-id"
version = "0.1.0"
edition = "2021"
description = "StellarID — decentralized identity and verifiable credentials on Stellar Soroban"
license = "MIT"
repository = "https://github.com/laugh-tales/stellar-id"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.7.6", features = [] }

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
